--- a/coin-flip.html
+++ b/coin-flip.html
@@ -9,7 +9,7 @@
 <body>
     <a href="index.html"><- Back to Navigation</a><br/><br/>
     <button id="flip" type="button">Coin Toss</button>
-    <div id="result"></div><p>Number of tosses: </p><div id="tosses"></div>
+    <div id="result"></div><p>Number of tosses: </p><div id="tosses">0</div>
     <script src="./assets/javascript/coin-flip.js"></script>
 </body>
 </html>
